Name: mypretty
Version: 0.1
-- This is a comment
Synopsis: My pretty printing library with JSON support
Description:
  A simple pretty-printing library that illustrates how to
  develop a Haskell library.
Author: Real World Haskell
Maintainer: nobody@realworldhaskell.org
Cabal-Version: >= 1.2
--License-File:

library
  Exposed-Modules:  Prettify
                    PrettyJSON
                    SimpleJSON 
  Build-Depends:    base >= 2.0
--  Other-Modules:    --  
